	PR lto/53572 	* cgraph.h (varpool_can_remove_if_no_refs): Fix handling of 	used symbols.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@188982 138bc75d-0d04-0410-961f-82ee72b054a4